# Finacial-Calculator

./: CMakeLists.txt
.cache/clangd/index/: enum.hpp.0E65F72DEDBB31DF.idx  game_controller.cpp.DB904BB2FD20EADB.idx  game_controller.hpp.5CCFBE729E58C6A0.idx  interface.cpp.0944B729254623C2.idx  interface.hpp.797CCA1ECEEE166E.idx  main.cpp.BFCD210095CBA535.idx
src/: CMakeLists.txt  a.out  main.cpp  maneger.cpp  maneger.hpp  table.cpp  table.hpp  test.cpp
tests/: a.out  test_output.txt
